api and routes fixes with package added
